[tool.poetry]
name = "ella-v-acoustic-model"
version = "0.1.0"
description = ""
authors = ["nicolvisser <nicolvisser@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
simple-parsing = "^0.1.6"
xformers = "^0.0.29.post1"
tqdm = "^4.67.0"


[tool.poetry.group.dev.dependencies]
click = "^8.1.8"
torchaudio = "^2.0.0"
soundfile = "^0.13.0"
lightning = "^2.5.0.post0"
wandb = "^0.19.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
